[package]
name = "iron_vhosts"
version = "0.5.0"
authors = ["Casey Allred <casey@modernizedmedia.com>"]
description = "An Iron addon to allow requests to be routed based on the host."
documentation = "https://github.com/sbditto85/iron_vhosts"
homepage = "https://github.com/sbditto85/iron_vhosts"
repository = "https://github.com/sbditto85/iron_vhosts"
readme = "README.md"
keywords = ["iron", "vhost", "vhosts"]
license-file = "LICENSE"


[dependencies]
iron = "0.5"

[dev-dependencies]
router = "0.5"
